force-app/main/default/objects/COM_VariousApprovalMgmt__c/COM_VariousApprovalMgmt__c.object-meta.xml
<CustomObject>
    <description>여러 유형의 Approval 요청 정보를 관리
- 신규 Acc, Acc 활성/비활성, Acc KYC</description>
    <label>Various Approval Mgmt</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Various Approval Mgmt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>