force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/Approver2_lk__c.field-meta.xml
<CustomField>
    <fullName>Approver2_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Various_Approval_Mgmt2</relationshipName>
    <type>Lookup</type>
</CustomField>