force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/Approver3_lk__c.field-meta.xml
<CustomField>
    <fullName>Approver3_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Various_Approval_Mgmt3</relationshipName>
    <type>Lookup</type>
</CustomField>