force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/CurrentApprover_lk__c.field-meta.xml
<CustomField>
    <fullName>CurrentApprover_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Various_Approval_Mgmt8</relationshipName>
    <type>Lookup</type>
</CustomField>