force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/CurrentSubmitDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentSubmitDate__c</fullName>
    <label>Current Submit Date</label>
    <type>DateTime</type>
</CustomField>