force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/CustomerNameEng__c.field-meta.xml
<CustomField>
    <fullName>CustomerNameEng__c</fullName>
    <label>Customer Name(Eng)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>