force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/CustomerNameKor__c.field-meta.xml
<CustomField>
    <fullName>CustomerNameKor__c</fullName>
    <label>Customer Name(Kor)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>