force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/FinalApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>FinalApprovedDate__c</fullName>
    <label>Final Approved Date</label>
    <type>DateTime</type>
</CustomField>