force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/FinalApprover_lk__c.field-meta.xml
<CustomField>
    <fullName>FinalApprover_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Various_Approval_Mgmt6</relationshipName>
    <type>Lookup</type>
</CustomField>