force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/InsurancePolicy__c.field-meta.xml
<CustomField>
    <fullName>InsurancePolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Various Approval Mgmt</relationshipLabel>
    <relationshipName>VariousApprovalMgmt_InsurancePolicy</relationshipName>
    <type>Lookup</type>
</CustomField>