force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/InsuredType__c.field-meta.xml
<CustomField>
    <fullName>InsuredType__c</fullName>
    <label>Insured Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>