force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/NextApprover_lk__c.field-meta.xml
<CustomField>
    <fullName>NextApprover_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Various_Approval_Mgmt7</relationshipName>
    <type>Lookup</type>
</CustomField>