force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Various Approval Mgmt</relationshipLabel>
    <relationshipName>VariousApprovalMgmt_Placement</relationshipName>
    <type>Lookup</type>
</CustomField>