force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/ProcessInstanceId__c.field-meta.xml
<CustomField>
    <fullName>ProcessInstanceId__c</fullName>
    <label>Process Instance Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>