force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/ProcessStatus__c.field-meta.xml
<CustomField>
    <fullName>ProcessStatus__c</fullName>
    <label>(X)Process Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>