force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/RelatedAccount_lk__c.field-meta.xml
<CustomField>
    <fullName>RelatedAccount_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Various Approval Mgmt</relationshipLabel>
    <relationshipName>Various_Approval_Mgmt</relationshipName>
    <type>Lookup</type>
</CustomField>