force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/RelatedOutwardFund_lk__c.field-meta.xml
<CustomField>
    <fullName>RelatedOutwardFund_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Outward Fund</label>
    <referenceTo>OutwardFund__c</referenceTo>
    <relationshipLabel>Various Approval Mgmt</relationshipLabel>
    <relationshipName>Various_Approval_Mgmt</relationshipName>
    <type>Lookup</type>
</CustomField>