force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/RequestComments__c.field-meta.xml
<CustomField>
    <fullName>RequestComments__c</fullName>
    <label>Request Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>