force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/SubmitDate__c.field-meta.xml
<CustomField>
    <fullName>SubmitDate__c</fullName>
    <label>SubmitDate</label>
    <type>Date</type>
</CustomField>