force-app/main/default/objects/COM_VariousApprovalMgmt__c/fields/Submitter_lk__c.field-meta.xml
<CustomField>
    <fullName>Submitter_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Various_Approval_Mgmt</relationshipName>
    <type>Lookup</type>
</CustomField>