force-app/main/default/objects/COM_VariousApprovalMgmt__c/recordTypes/AccountApproval.recordType-meta.xml
<RecordType>
    <fullName>AccountApproval</fullName>
    <active>true</active>
    <description>Account 관련 Approval</description>
    <label>Account Approval</label>
</RecordType>