force-app/main/default/objects/COM_VariousApprovalMgmt__c/recordTypes/AdjustmentApproval.recordType-meta.xml
<RecordType>
    <fullName>AdjustmentApproval</fullName>
    <active>true</active>
    <description>LK_KR 계약 Adjustment Approval 처리시 사용</description>
    <label>Adjustment Approval</label>
</RecordType>