force-app/main/default/objects/COM_VariousApprovalMgmt__c/recordTypes/CancelClosing.recordType-meta.xml
<RecordType>
    <fullName>CancelClosing</fullName>
    <active>false</active>
    <description>LK_Re 계약 Cancel Closing 처리시 사용</description>
    <label>Cancel Closing</label>
</RecordType>