force-app/main/default/objects/COM_VariousApprovalMgmt__c/recordTypes/OutwardFundApproval.recordType-meta.xml
<RecordType>
    <fullName>OutwardFundApproval</fullName>
    <active>true</active>
    <description>Outward Fund 결재 시 사용</description>
    <label>Outward Fund Approval</label>
</RecordType>