force-app/main/default/objects/COM_VariousApprovalMgmt__c/recordTypes/PostingApproval.recordType-meta.xml
<RecordType>
    <fullName>PostingApproval</fullName>
    <active>true</active>
    <description>계약 Posting 시 사용</description>
    <label>Posting Approval</label>
</RecordType>