force-app/main/default/objects/COM_VariousApprovalMgmt__c/recordTypes/PostingRevise.recordType-meta.xml
<RecordType>
    <fullName>PostingRevise</fullName>
    <active>false</active>
    <description>LK_Re 계약 Revise 처리시 사용</description>
    <label>Posting Revise</label>
</RecordType>