force-app/main/default/objects/COM_VariousApprovalMgmt__c/recordTypes/ReverseClosing.recordType-meta.xml
<RecordType>
    <fullName>ReverseClosing</fullName>
    <active>false</active>
    <description>LK_Re 계약 Reverse All Closing 처리시 사용</description>
    <label>Reverse Closing</label>
</RecordType>