force-app/main/default/objects/COM_VariousApprovalMgmt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ApproveType__c</columns>
    <columns>SubmitDate__c</columns>
    <columns>Submitter_lk__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>Approver1_lk__c</columns>
    <columns>Approver2_lk__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>